add deleted