@@ -4,6 +4,7 @@ import com.example.blood_donation.dto.CityDTO;
 import com.example.blood_donation.entity.City;
 import com.example.blood_donation.repositoty.CityRepository;
 import jakarta.persistence.EntityNotFoundException;
+import jakarta.transaction.Transactional;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -20,32 +21,39 @@ public class CityService {
     @Autowired
     private ModelMapper modelMapper;
 
-    public List<CityDTO> getAllLocations() {
+    public List<CityDTO> getAllCitys() {
         return cityRepository.findAll().stream()
+                .filter(city -> !city.isDeleted())
                 .map(city -> modelMapper.map(city, CityDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public CityDTO getLocationById(Long id) {
+    public CityDTO getCityById(Long id) {
         City city = cityRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Location not found"));
+                .orElseThrow(() -> new EntityNotFoundException("City not found"));
         return modelMapper.map(city, CityDTO.class);
     }
 
-    public CityDTO createLocation(CityDTO dto) {
+    public CityDTO createCity(CityDTO dto) {
         City city = modelMapper.map(dto, City.class);
         return modelMapper.map(cityRepository.save(city), CityDTO.class);
     }
 
-    public CityDTO updateLocation(Long id, CityDTO dto) {
+    public CityDTO updateCity(Long id, CityDTO dto) {
         City city = cityRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Location not found"));
+                .orElseThrow(() -> new EntityNotFoundException("City not found"));
 
         city.setName(dto.getName());
         return modelMapper.map(cityRepository.save(city), CityDTO.class);
     }
 
-    public void deleteLocation(Long id) {
-        cityRepository.deleteById(id);
+    @Transactional
+    public void delete(Long id) {
+        City city = cityRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("City not found"));
+
+        city.setDeleted(true);
+        cityRepository.save(city);
     }
+
 }
